[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swole-poker"
version = "0.1.0"
description = "A Gymnasium environment for poker — train your agents to get swole."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Jacob Morgan", email = "Jacobmrgn@icloud.com" }
]
keywords = ["poker", "reinforcement-learning", "gymnasium", "gym", "ai"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "gymnasium>=1.0",
  "numpy>=2.0",
]

[project.optional-dependencies]
examples = [
  "stable-baselines3",
  "matplotlib",
]

render = [
    "pygame",
]

all = [
  "swole-poker[examples]",
  "swole-poker[render]",
]

[project.urls]
Homepage = "https://github.com/JacobMorga/SwolePoker"

[tool.hatch.build.targets.wheel]
packages = ["swole_poker"]